otherStandard/objects/Object5__c.object
<CustomObject>
    <fields>
        <fullName>field1__c</fullName>
        <label>field1</label>
        <length>122</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field2__c</fullName>
        <label>field2</label>
        <length>212</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>new_picklist__c</fullName>
        <label>new_picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>London</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>Rome</fullName>
                </value>
                <value>
                    <fullName>Toronto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>picklist1__c</fullName>
        <label>picklist1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Melon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Object5</label>
    <nameField>
        <label>Object5 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object5</pluralLabel>
    <recordTypes>
        <fullName>main</fullName>
        <active>true</active>
        <label>main</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>